# gpt-commit-rust

./: .gitignore  Cargo.toml  README.md  release.md
.github/workflows/: build.yaml
src/: command_utils.rs  git.rs  gpt_api.rs  main.rs  os_info.rs  query_params.rs  utils.rs
