[package]
name = "gpt-commit-rust"
version = "0.4.6"
edition = "2021"

[dependencies]
colored = "2.0.0"
dotenv = "0.15.0"
futures-util = "0.3.28"
git2 = "0.17.2"
indicatif = { version = "0.17.5", features = ["improved_unicode"] }
inquire = { version = "0.6.2" }
lazy_static = "1.4.0"
normpath = "1.1.1"
os-version = "0.2.0"
proc-macro2 = "1.0.64"
regex = "1.8.3"
reqwest = { version = "0.11.18", features = [
    "blocking",
    "json",
    "serde_json",
    "stream",
] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
term_size = "0.3.2"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
toml = "0.7.4"
